--- a/experimental/svelte5/src/app.html
+++ b/experimental/svelte5/src/app.html
@@ -2,11 +2,11 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<!-- <link rel="icon" href="static/favicon.png" /> -->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" style="margin:0px;padding:0px;overflow: hidden;">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
