--- a/svelte/src/app.html
+++ b/svelte/src/app.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/icon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png">
+    <link rel="mask-icon" href="%sveltekit.assets%/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     %sveltekit.head%
 
